--- a/Content/GeneradorContrasenas/style.css
+++ b/Content/GeneradorContrasenas/style.css
@@ -217,7 +217,7 @@ body {
 #Menu {
     width: 100%;
     padding: 14px 20px;
-    color: white;
+    color: rgb(12, 12, 12);
     border: none;
     border-radius: var(--border-radius);
     cursor: pointer;
