--- a/Content/Papagado/style.css
+++ b/Content/Papagado/style.css
@@ -124,7 +124,7 @@ button:hover {
 #Menu {
     width: 100%;
     padding: 14px 20px;
-    color: white;
+    color: rgb(0, 0, 0);
     border: none;
     border-radius: var(--border-radius);
     cursor: pointer;
